--- a/backend/project_form/templates/front/contact.html
+++ b/backend/project_form/templates/front/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
+  {% load static %}
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,37 +9,36 @@
     <link rel="stylesheet" href="../Awesome/fontawesome.css" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="{% static 'css/contact.css' %}" />
-      <script src="{%static 'js/main.js' %}" defer></script>
+    <script src="{%static 'js/main.js' %}" defer></script>
   </head>
   <body>
     <header>
-      <nav>
+      <nav id="nav-placeholder">
         <div class="nav-container">
           <div class="logo">
             <img src="{% static 'img/MIE-logo.png' %}" alt="Logo" />
           </div>
-          <ul class="nav-links">
+          <ul class="nav-links" id="nav-links">
             <li>
-              <a href="/home" data-page="./front">Home</a>
+              <a href="/" data-page="/">Home</a>
             </li>
             <li>
-              <a href="./about" data-page="../about"
-                >About Us</a
-              >
+              <a href="../about" data-page="../about">About Us</a>
             </li>
             <li>
-              <a href="./projects" data-page="../projects"
-                >Projects</a
-              >
+              <a href="../projects" data-page="../projects">Projects</a>
             </li>
             <li>
-              <a href="./contact" data-page="../contact"
-                >Contact Us</a
-              >
+              <a href="../contact" data-page="../contact">Contact Us</a>
             </li>
           </ul>
           <div class="nav__button" id="nav-button">
             <input type="submit" value="Registration" />
+          </div>
+          <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
           </div>
         </div>
       </nav>
@@ -56,7 +55,7 @@
         <form action="#" method="post">
           <div class="form-group">
             <input type="text" name="name" placeholder="Your Name *" required />
-            
+
             <input type="email" name="email" placeholder="E-Mail *" required />
           </div>
           <div class="form-group">
@@ -106,29 +105,29 @@
             <h3>Follow Us</h3>
             <div class="social-links">
               <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/facebook.png' %}"
-                    alt="facebook"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
-                <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/instagram.png' %}"
-                    alt="instagram"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
-                <a href="#"
-                  ><img
-                    height="30"
-                    width="30"
-                    src="{% static 'img/socail icons/linkedin.png' %}"
-                    alt="linkedin"
-                    style="filter: brightness(100) grayscale(1) invert(1)"
-                /></a>
+                ><img
+                  height="30"
+                  width="30"
+                  src="{% static 'img/socail icons/facebook.png' %}"
+                  alt="facebook"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="{% static 'img/socail icons/instagram.png' %}"
+                  alt="instagram"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
+              <a href="#"
+                ><img
+                  height="30"
+                  width="30"
+                  src="{% static 'img/socail icons/linkedin.png' %}"
+                  alt="linkedin"
+                  style="filter: brightness(100) grayscale(1) invert(1)"
+              /></a>
             </div>
           </div>
         </div>
