--- a/backend/project_form/static/css/contact.css
+++ b/backend/project_form/static/css/contact.css
@@ -1,356 +1,567 @@
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background: url('../Img/website\ pattern-03.svg') no-repeat center center fixed;
-    background-size: cover;
-    color: #fff;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background: url("../Img/website\ pattern-03.svg") no-repeat center center
+    fixed;
+  background-size: cover;
+  color: #fff;
 }
-
 
 header {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    padding-bottom: 20px;
-    background: rgba(38, 37, 37, 0.815);
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  padding-bottom: 20px;
+  background: rgba(38, 37, 37, 0.815);
 }
 
-nav{
-    width: 100%;
-    /* padding: 0 20px; */
-    background-color: #fff;
+nav {
+  width: 100%;
+  /* padding: 0 20px; */
+  background-color: #fff;
 }
 
-nav div .nav-container{
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+nav div .nav-container {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .logo img {
-    height: 50px;
+  height: 50px;
 }
 
 .nav-links {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 20px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
 }
 
 .nav-links li {
-    margin: 0;
+  margin: 0;
 }
 
 .nav-links li a {
-    color: #242323;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 10px 20px;
-    transition: background 0.3s, color 0.3s;
+  color: #242323;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px 20px;
+  transition: background 0.3s, color 0.3s;
 }
 
 .nav-links li a:hover {
-    /* background: #e91e63; */
-    color: #a33131;
-    /* border-radius: 5px; */
-    /* border-right: 1.5px solid #a33131; */
+  /* background: #e91e63; */
+  color: #a33131;
+  /* border-radius: 5px; */
+  /* border-right: 1.5px solid #a33131; */
 }
 
-nav input{
-    padding: .5em 1.5em;
-    margin-right: .4em;
-    border: none;
-    border-radius: 27em;
-    font-weight: 600;
-    background-color: white;
-    color:rgb(197, 22, 22);
-    border: rgba(212, 60, 60, 0.39) solid 0.3px;
-    /* box-shadow: rgba(128, 128, 128, 0.699) 1px 1px 5px ; */
+nav input {
+  padding: 0.5em 1.5em;
+  margin-right: 0.4em;
+  border: none;
+  border-radius: 27em;
+  font-weight: 600;
+  background-color: white;
+  color: rgb(197, 22, 22);
+  border: rgba(212, 60, 60, 0.39) solid 0.3px;
+  /* box-shadow: rgba(128, 128, 128, 0.699) 1px 1px 5px ; */
 }
 
-nav input:hover{
-    color: white;
-    background-image:repeating-linear-gradient(to right,rgba(197, 22, 22, 0.822),rgb(143, 95, 95));
-    
+nav input:hover {
+  color: white;
+  background-image: repeating-linear-gradient(
+    to right,
+    rgba(197, 22, 22, 0.822),
+    rgb(143, 95, 95)
+  );
 }
-
 
 .landing {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 40px 0;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+  text-align: center;
 }
 
 .landing-image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
 
 .landing-text {
-    margin-top: 20px;
-    text-align: center;
-    padding: 0 20px;
+  margin-top: 20px;
+  text-align: center;
+  padding: 0 20px;
 }
 
 .landing-text h1 {
-    font-size: 56px;
-    margin: 0;
+  font-size: 56px;
+  margin: 0;
 }
 
 .landing-text p {
-    font-size: 28px;
-    margin: 10px 0;
+  font-size: 28px;
+  margin: 10px 0;
 }
 
 @media (min-width: 768px) {
-    .nav-container {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-    nav ul {
-        gap: 20px;
-    }
+  .nav-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  nav ul {
+    gap: 20px;
+  }
 
-    .landing {
-        flex-direction: row;
-        justify-content: space-between;
-        /* text-align: left; */
-    }
-    .landing-image img{
-        height: 350px;
-    }
-    .landing-image, .landing-text {
-        flex: 1;
-        margin: 0 20px;
-    }
-    .landing-text {
-        margin-top: 0;
-        padding: 0;
-    }
+  .landing {
+    flex-direction: row;
+    justify-content: space-between;
+    /* text-align: left; */
+  }
+  .landing-image img {
+    height: 350px;
+  }
+  .landing-image,
+  .landing-text {
+    flex: 1;
+    margin: 0 20px;
+  }
+  .landing-text {
+    margin-top: 0;
+    padding: 0;
+  }
+}
+
+nav {
+  width: 100%;
+  background-color: #fff;
+  height: 60px;
+  position: relative;
+}
+
+.nav-container {
+  width: 90%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.logo img {
+  height: 50px;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+}
+
+.nav-links li {
+    color: #000;
+  margin: 0;
+}
+
+.nav-links li a {
+  color: #242323;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px 20px;
+  transition: background 0.3s, color 0.3s;
+}
+
+.nav-links li a:hover {
+  color: #a33131;
+}
+
+.nav__button input {
+  padding: 0.5em 1.5em;
+  margin-right: 0.4em;
+  border: none;
+  border-radius: 27em;
+  font-weight: 600;
+  background-color: white;
+  color: rgb(197, 22, 22);
+  border: rgba(212, 60, 60, 0.39) solid 0.3px;
+}
+
+.nav__button input:hover {
+  color: white;
+  background-image: repeating-linear-gradient(
+    to right,
+    rgba(197, 22, 22, 0.822),
+    rgb(143, 95, 95)
+  );
+}
+
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  height: 3px;
+  width: 25px;
+  background-color: #333;
+  margin: 4px 0;
+  transition: 0.3s;
+}
+
+.landing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+  text-align: center;
+}
+
+.landing-text {
+  margin-top: 20px;
+  text-align: center;
+  justify-content: center;
+  padding: 0 20px;
+}
+
+.landing-text h1 {
+  font-size: 56px;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    flex-direction: column;
+    width: 100%;
+    display: none;
+    background-color: #fff;
+
+  }
+
+  .nav-links.active {
+    display: flex;
+    border-radius: 0 0 20px 20px;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  }
+
+  .nav-links li {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .nav-links li a {
+    color: #000;
+    font-weight: bolder;
+  }
+
+  .menu-toggle {
+    display: flex;
+  }
+
+  .landing {
+    margin: 20px 0;
+  }
+
+  .landing-text h1 {
+    font-size: 32px;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .landing {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .landing-text {
+    margin-top: 0;
+    padding: 0;
+  }
 }
 
 .container {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 20px;
+}
+
+ 
+
+.content {
+  text-align: center;
+  margin: 40px 0;
+  padding: 0 20px;
+}
+
+.content h2 {
+  font-size: 48px;
+  margin: 0;
+}
+
+.content p {
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.form-container {
+  width: 100%;
+  max-width: 800px;
+  background-color: rgba(255, 255, 255, 0.974);
+  color: #000;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.form-container h3 {
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 30px;
+  color: #a33131;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+form button {
+  padding: 0.5em 1.5em;
+  margin-right: 0.4em;
+  border: none;
+  border-radius: 27em;
+  font-weight: 600;
+  background-color: white;
+  color: rgb(197, 22, 22);
+  border: rgba(212, 60, 60, 0.39) solid 0.3px;
+  /* box-shadow: rgba(128, 128, 128, 0.699) 1px 1px 5px ; */
+}
+
+form button:hover {
+  color: white;
+  background-image: repeating-linear-gradient(
+    to right,
+    rgba(197, 22, 22, 0.822),
+    rgb(143, 95, 95)
+  );
+}
+
+@media (min-width: 768px) {
+  .nav-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  nav ul {
+    gap: 20px;
+  }
+  .header {
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+  }
+  .landing {
+    flex-direction: row;
+    justify-content: space-between;
+    /* text-align: left; */
+  }
+  .landing-image img {
+    height: 350px;
+  }
+  .landing-image,
+  .landing-text {
+    flex: 1;
+    margin: 0 20px;
+  }
+  .landing-text {
+    margin-top: 0;
+    padding: 0;
+  }
+  .form-group {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .form-group input {
+    width: 48%;
+  }
+}
+
+/* =============Footer======== */
+footer {
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 40px 0;
+}
+
+.footer-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-column {
+  flex: 1 1 calc(25% - 20px);
+  margin: 10px;
+}
+
+.footer-column h3 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+.footer-column p,
+.footer-column ul {
+  font-size: 1em;
+  margin: 0;
+  line-height: 1.6;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 10px;
+}
+
+.footer-column ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-column ul li a:hover {
+  text-decoration: underline;
+}
+
+.social-links a {
+  /* display: inline-block; */
+  margin-right: 10px;
+  color: #fff;
+  font-size: 1.5em;
+}
+
+.social-links a:hover {
+  color: #007bff;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.footer-bottom p {
+  margin: 0;
+  font-size: 1em;
+  color: #bbb;
+}
+
+@media (max-width: 768px) {
+  .footer-column {
+    flex: 1 1 calc(50% - 20px);
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-column {
+    flex: 1 1 100%;
+  }
+}
+/* ===============End Footer=================== */
+
+@media screen and (max-width: 768px) {
+  .menu-toggle {
+    z-index: 3;
+  }
+  .menu-toggle + .nav-links.active {
+    background-color: white;
+  }
+  .nav-links.active {
+    position: absolute;
+    inset: 0;
+    height: fit-content;
+
+    z-index: 2;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .container {
     position: relative;
     z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 20px;
-}
+    padding:20px;
+    box-sizing: border-box;
 
-.content {
-    text-align: center;
-    margin: 40px 0;
-    padding: 0 20px;
-}
-
-.content h2 {
-    font-size: 48px;
-    margin: 0;
-}
-
-.content p {
-    font-size: 20px;
-    margin: 10px 0;
-}
-
-.form-container {
+  }
+  
+  .form-container {
     width: 100%;
     max-width: 800px;
     background-color: rgba(255, 255, 255, 0.974);
     color: #000;
-    padding: 40px;
+    padding: 2ch;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+
+  }
+  .form-group input, .form-group textarea{
+    padding: 2ch .3ch;
+  }
+  
+  
 }
-
-.form-container h3 {
-    text-align: center;
-    font-size: 28px;
-    margin-bottom: 30px;
-    color: #a33131;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 30px;
-}
-
-.form-group input, .form-group textarea {
-    width: 100%;
-    padding: 15px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-
-form button{
-    padding: .5em 1.5em;
-    margin-right: .4em;
-    border: none;
-    border-radius: 27em;
-    font-weight: 600;
-    background-color: white;
-    color:rgb(197, 22, 22);
-    border: rgba(212, 60, 60, 0.39) solid 0.3px;
-    /* box-shadow: rgba(128, 128, 128, 0.699) 1px 1px 5px ; */
-}
-
-form button:hover{
-    color: white;
-    background-image:repeating-linear-gradient(to right,rgba(197, 22, 22, 0.822),rgb(143, 95, 95));
-    
-}
-
-
-@media (min-width: 768px) {
-    .nav-container {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-    nav ul {
-        gap: 20px;
-    }
-    .header {
-        flex-direction: row;
-        justify-content: space-between;
-        text-align: left;
-    }
-    .landing {
-        flex-direction: row;
-        justify-content: space-between;
-        /* text-align: left; */
-    }
-    .landing-image img{
-        height: 350px;
-    }
-    .landing-image, .landing-text {
-        flex: 1;
-        margin: 0 20px;
-    }
-    .landing-text {
-        margin-top: 0;
-        padding: 0;
-    }
-    .form-group {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .form-group input {
-        width: 48%;
-    }
-}
-
-
-/* =============Footer======== */
-footer{
-    font-family: 'Helvetica Neue', Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-}
-
-.footer {
-    background-color: #333;
-    color: #fff;
-    padding: 40px 0;
-}
-
-.footer-container {
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.footer-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.footer-column {
-    flex: 1 1 calc(25% - 20px);
-    margin: 10px;
-}
-
-.footer-column h3 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
-}
-
-.footer-column p, .footer-column ul {
-    font-size: 1em;
-    margin: 0;
-    line-height: 1.6;
-}
-
-.footer-column ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-column ul li {
-    margin-bottom: 10px;
-}
-
-.footer-column ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.footer-column ul li a:hover {
-    text-decoration: underline;
-}
-
-.social-links a {
-    /* display: inline-block; */
-    margin-right: 10px;
-    color: #fff;
-    font-size: 1.5em;
-}
-
-.social-links a:hover {
-    color: #007bff;
-}
-
-.footer-bottom {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.footer-bottom p {
-    margin: 0;
-    font-size: 1em;
-    color: #bbb;
-}
-
-@media (max-width: 768px) {
-    .footer-column {
-        flex: 1 1 calc(50% - 20px);
-    }
-}
-
-@media (max-width: 480px) {
-    .footer-column {
-        flex: 1 1 100%;
-    }
-}
-/* ===============End Footer=================== */
-
